--- a/iclr2026_conference.bib
+++ b/iclr2026_conference.bib
@@ -1,24 +1,173 @@
-@incollection{Bengio+chapter2007,
-author = {Bengio, Yoshua and LeCun, Yann},
-booktitle = {Large Scale Kernel Machines},
-publisher = {MIT Press},
-title = {Scaling Learning Algorithms Towards {AI}},
-year = {2007}
+% ===== References from the project proposal =====
+
+@inproceedings{jena2025elucidating,
+  title={Elucidating Optimal Reward--Diversity Trade-offs in Text-to-Image Diffusion Models},
+  author={Jena, Pratyush and Singh, Neeraj and Agarwal, Mayank and Arora, Rishabh},
+  booktitle={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
+  year={2025}
 }
 
-@article{Hinton06,
-author = {Hinton, Geoffrey E. and Osindero, Simon and Teh, Yee Whye},
-journal = {Neural Computation},
-pages = {1527--1554},
-title = {A Fast Learning Algorithm for Deep Belief Nets},
-volume = {18},
-year = {2006}
+@inproceedings{miao2024training,
+  title={Training Diffusion Models Towards Diverse Image Generation with Reinforcement Learning},
+  author={Miao, Jiaxu and Xu, Hang and Li, Xiaotian and Xu, Wei and Tao, Dacheng},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2024}
 }
 
-@book{goodfellow2016deep,
-title={Deep learning},
-author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron and Bengio, Yoshua},
-volume={1},
-year={2016},
-publisher={MIT Press}
+@article{li2024alignment,
+  title={Alignment of Diffusion Models: Fundamentals, Challenges, and Future},
+  author={Li, Ziang and Li, Zhenguo and Wang, Chen and Liu, Xihui},
+  journal={arXiv preprint arXiv:2409.07253},
+  year={2024}
+}
+
+% ===== Diffusion model foundations =====
+
+@inproceedings{ho2020denoising,
+  title={Denoising Diffusion Probabilistic Models},
+  author={Ho, Jonathan and Jain, Ajay and Abbeel, Pieter},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2020}
+}
+
+@inproceedings{song2021denoising,
+  title={Denoising Diffusion Implicit Models},
+  author={Song, Jiaming and Meng, Chenlin and Ermon, Stefano},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2021}
+}
+
+@inproceedings{rombach2022high,
+  title={High-Resolution Image Synthesis with Latent Diffusion Models},
+  author={Rombach, Robin and Blattmann, Andreas and Lorenz, Dominik and Esser, Patrick and Ommer, Bj{\"o}rn},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2022}
+}
+
+@article{sohl2015deep,
+  title={Deep Unsupervised Learning using Nonequilibrium Thermodynamics},
+  author={Sohl-Dickstein, Jascha and Weiss, Eric and Maheswaranathan, Niru and Ganguli, Surya},
+  journal={Proceedings of the International Conference on Machine Learning (ICML)},
+  year={2015}
+}
+
+% ===== Text-to-image models =====
+
+@article{ramesh2022hierarchical,
+  title={Hierarchical Text-Conditional Image Generation with {CLIP} Latents},
+  author={Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
+  journal={arXiv preprint arXiv:2204.06125},
+  year={2022}
+}
+
+@article{saharia2022photorealistic,
+  title={Photorealistic Text-to-Image Diffusion Models with Deep Language Understanding},
+  author={Saharia, Chitwan and Chan, William and Saxena, Saurabh and Li, Lala and Whang, Jay and Denton, Emily and others},
+  journal={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2022}
+}
+
+@article{podell2024sdxl,
+  title={{SDXL}: Improving Latent Diffusion Models for High-Resolution Image Synthesis},
+  author={Podell, Dustin and English, Zion and Lacey, Kyle and Blattmann, Andreas and Dockhorn, Tim and M{\"u}ller, Jonas and Penna, Joe and Rombach, Robin},
+  journal={International Conference on Learning Representations (ICLR)},
+  year={2024}
+}
+
+% ===== Alignment / RLHF for diffusion models =====
+
+@article{black2024training,
+  title={Training Diffusion Models with Reinforcement Learning},
+  author={Black, Kevin and Janner, Michael and Du, Yilun and Kostrikov, Ilya and Levine, Sergey},
+  journal={International Conference on Learning Representations (ICLR)},
+  year={2024}
+}
+
+@article{fan2024reinforcement,
+  title={Reinforcement Learning for Fine-tuning Text-to-Image Diffusion Models},
+  author={Fan, Ying and Watkins, Olivia and Du, Yuqing and Liu, Hao and Ryu, Moonkyung and Boutilier, Craig and Abbeel, Pieter and Ghavamzadeh, Mohammad and Lee, Kangwook and Lee, Kimin},
+  journal={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2024}
+}
+
+@article{wallace2024diffusion,
+  title={Diffusion Model Alignment Using Direct Preference Optimization},
+  author={Wallace, Bram and Dang, Meihua and Rafailov, Rafael and Zhou, Linqi and Lou, Aaron and Purber, Senthil and Ermon, Stefano and Xiong, Caiming and Joty, Shafiq and Naik, Nikhil},
+  journal={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2024}
+}
+
+% ===== Classifier-free guidance =====
+
+@article{ho2022classifier,
+  title={Classifier-Free Diffusion Guidance},
+  author={Ho, Jonathan and Salimans, Tim},
+  journal={NeurIPS Workshop on Deep Generative Models and Downstream Applications},
+  year={2022}
+}
+
+% ===== Evaluation metrics =====
+
+@inproceedings{radford2021learning,
+  title={Learning Transferable Visual Models From Natural Language Supervision},
+  author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and others},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2021}
+}
+
+@inproceedings{zhang2018unreasonable,
+  title={The Unreasonable Effectiveness of Deep Features as a Perceptual Metric},
+  author={Zhang, Richard and Isola, Phillip and Efros, Alexei A and Shechtman, Eli and Wang, Oliver},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2018}
+}
+
+@article{heusel2017gans,
+  title={{GANs} Trained by a Two Time-Scale Update Rule Converge to a Local {Nash} Equilibrium},
+  author={Heusel, Martin and Ramsauer, Hubert and Unterthiner, Thomas and Nessler, Bernhard and Hochreiter, Sepp},
+  journal={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2017}
+}
+
+% ===== ImageReward =====
+
+@inproceedings{xu2023imagereward,
+  title={{ImageReward}: Learning and Evaluating Human Preferences for Text-to-Image Generation},
+  author={Xu, Jiazheng and Liu, Xiao and Wu, Yuchen and Tong, Yuxuan and Li, Qinkai and Ding, Ming and Tang, Jie and Dong, Yuxiao},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2023}
+}
+
+% ===== RLHF foundations =====
+
+@article{ouyang2022training,
+  title={Training Language Models to Follow Instructions with Human Feedback},
+  author={Ouyang, Long and Wu, Jeffrey and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll and Mishkin, Pamela and others},
+  journal={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2022}
+}
+
+@article{rafailov2023direct,
+  title={Direct Preference Optimization: Your Language Model is Secretly a Reward Model},
+  author={Rafailov, Rafael and Sharma, Archit and Mitchell, Eric and Ermon, Stefano and Manning, Christopher D and Finn, Chelsea},
+  journal={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2023}
+}
+
+% ===== Guidance scale and diversity =====
+
+@inproceedings{dhariwal2021diffusion,
+  title={Diffusion Models Beat {GANs} on Image Synthesis},
+  author={Dhariwal, Prafulla and Nichol, Alexander},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2021}
+}
+
+% ===== Survey reference =====
+
+@article{liu2026alignment,
+  title={Alignment of Diffusion Models: Fundamentals, Challenges, and Future},
+  author={Liu, Buhua and Shao, Shitong and Li, Bao and Bai, Lichen and Xu, Zhiqiang and Xiong, Haoyi and Kwok, James and Helal, Sumi and Xie, Zeke},
+  journal={arXiv preprint arXiv:2409.07253},
+  year={2026}
 }
