--- a/our_report.tex
+++ b/our_report.tex
@@ -1,6 +1,6 @@
 \documentclass{article} % For LaTeX2e
 \usepackage{iclr2026_conference,times}
-
+\usepackage{float}
 % Optional math commands from https://github.com/goodfeli/dlbook_notation.
 \input{math_commands.tex}
 
@@ -171,12 +171,58 @@ An alternative to fine-tuning is to align models at inference time without modif
 Across all three paradigms, the core mechanism is the same: alignment is achieved by concentrating the output distribution on high-preference regions, which inherently reduces its entropy. In RLHF, this is controlled by the KL penalty weight $\alpha$; in DPO, by the preference strength parameter; and in CFG, by the guidance scale $w$. The diversity loss is therefore not a bug of any specific method but a structural consequence of preference-driven optimization, as formalized in Section~\ref{sec:problem}.
 
 \subsection{Diversity Preservation in Generative Models}
+Preserving or restoring diversity in conditional generation has been approached from multiple angles.
 
-% TODO: Summarize papers that address diversity loss and propose mitigation strategies.
+\paragraph{Batch-wise repulsion and particle-based sampling.}
+Particle Guidance formulates joint sampling of multiple particles by adding the gradient of a global potential to the score function, producing repulsive forces between samples to increase batch diversity. Such approaches are attractive at test time because they are training-free and operate by modifying the sampling vector field; however, their effectiveness depends on the representation on which similarity/diversity is measured. When similarity is computed in the noisy latent domain (the $x_t$ space) early timesteps suffer from low signal-to-noise ratio and weak semantic structure, reducing the impact of repulsion; this motivates strategies that measure repulsion on cleaner estimates of the sample (e.g., analytically estimated $\hat x_0$) to obtain semantically meaningful forces \citep{corso2023particle, rombach2022high}.
+
+\paragraph{Reward-based diversity and RL fine-tuning.}
+An alternative is to bake diversity into the training objective, e.g., via diversity-promoting rewards or entropy-regularized RL. Such methods can achieve strong improvements but require costly fine-tuning and careful reward design to avoid gaming; they also illustrate the theoretical result that naive reward maximization tends to collapse the output distribution unless regularized or explicitly diversified \citep{miao2024training, jena2025elucidating, black2024training}.
+
+\paragraph{Latent-space regularization and multi-policy blending.}
+Some works propose regularizing internal representations or maintaining ensembles/mixes of base and fine-tuned policies to preserve structural variety while improving alignment. Annealed schedules and importance-guided blending (AIG-like strategies) gradually transition between base and adapted models; spatially- or entropy-adaptive blending refines this idea by letting the model choose when and where to apply stronger alignment pressure \citep{zhang2024annealed, podell2024sdxl}. Multi-policy mixtures can be implemented at training time (ensembles) or at inference time via model interpolation, each with different computational and stability trade-offs \citep{clark2024draft}.
+
+\paragraph{Attention-based and structural steering.}
+Manipulating cross- and self-attention maps has been shown effective for compositional control and for avoiding background/subject collapse: by inspecting attention entropy and token-specific maps one can identify semantically important regions and apply different alignment strengths regionally. Prompt-to-Prompt and related attention-control techniques provide practical tools for such interventions, while analytic studies of attention in Stable Diffusion expose mechanisms to extract reliable spatial masks for regional control \citep{hertz2023prompt, liu2024understanding}.
+
+\paragraph{Trade-offs, limitations, and hybrid designs.}
+Training-based diversity methods are powerful but costly; pure test-time methods are efficient but sometimes brittle or myopic. Hybrid ideas—e.g., using test-time repulsion measured on clean-image estimates combined with region-aware model blending and harmonization—seek the best of both worlds. Our proposed Clean-Manifold Diversity Guidance and Object-Aware Entropy Guidance fit precisely into this hybrid category: they are test-time, training-free, but operate on semantically meaningful estimates (the $\hat x_0$ manifold and attention-derived masks) to produce robust diversity gains without fine-tuning \citep{corso2023particle, miao2024training, hertz2023prompt}.
 
 \subsection{Evaluation Metrics for Alignment and Diversity}
+Measuring alignment and diversity requires multiple complementary metrics; no single score suffices.
 
-% TODO: Discuss metrics and benchmarks used in the literature.
+\paragraph{Quality / alignment metrics.}
+Commonly used quality and alignment indicators include CLIP-based similarity between prompt and image (``CLIP score''), human preference rates (A/B comparisons), R-Precision (retrieval-based alignment), and learned preference predictors such as PickScore. Each has strengths and biases: CLIP is cheap and correlates with semantic alignment but is sensitive to style and dataset biases; learned scorers can be more faithful to human judgements but risk overfitting to annotator idiosyncrasies \citep{radford2021learning, kirstain2023pick}.
+
+\paragraph{Diversity metrics.}
+Diversity is measured at batch and population levels. Intra-batch perceptual metrics such as LPIPS quantify perceptual distance between samples in the same prompt-conditioned batch; coverage and precision/recall for generative models estimate how well the model spans the target distribution. Entropy-based measures (e.g., the conditional output entropy estimated via sampling or model logits) offer another view but are harder to estimate for diffusion models. Visual diversity should be reported both as aggregated statistics (mean intra-batch LPIPS, variance of feature descriptors) and as distributions (histograms, CDFs) to reveal tail behaviour \citep{zhang2018unreasonable, heusel2017gans}.
+
+\paragraph{Composite evaluations and Pareto analysis.}
+Because alignment and diversity trade off, the recommended evaluation protocol plots a \emph{Diversity vs.\ Quality} Pareto curve (e.g., intra-batch LPIPS on the x-axis vs.\ CLIP score or PickScore on the y-axis). This reveals how methods shift the trade-off frontier. Complement these quantitative curves with targeted human evaluation on a representative prompt set and with qualitative inspection (example grids showing where diversity increases but alignment remains acceptable) \citep{jena2025elucidating, miao2024training}.
+
+\paragraph{Robustness and statistical testing.}
+Report metrics over a diverse prompt suite (multiple seeds, prompt types, subject complexity) and include statistical significance tests when comparing methods. Also evaluate failure modes: background collapse, subject identity drift, and visual artifacts introduced by blending/harmonization \citep{li2024alignment}.
+
+\subsection{Relation of Prior Work to Our Proposal}
+Prior test-time repulsive methods (e.g., particle-based guidance) motivate batch-level steering but are limited when similarity is measured in noisy latent space \citep{corso2023particle}. Reward-diversity RL approaches demonstrate the potential but are computationally expensive and prone to reward over-optimization \citep{miao2024training, black2024training}. Attention-based interventions show the utility of internal signals for regional control \citep{hertz2023prompt, liu2024understanding}. 
+
+Our framework combines these insights: (1) compute repulsive/diversity forces on analytic clean estimates ($\hat x_0$) to obtain semantically meaningful batch repulsion early in sampling, and (2) use attention-entropy-driven, region-aware blending between base and fine-tuned models with a frequency harmonization step to preserve global lighting while keeping structural diversity. This combination is designed to expand the Pareto frontier between diversity (LPIPS) and alignment (CLIP/PickScore) more effectively than methods that operate solely in $x_t$ or rely on fixed schedules \citep{corso2023particle, jena2025elucidating, hertz2023prompt}.
+
+\subsection{Limitations of Existing Approaches and Research Gaps}
+
+Despite the significant progress in alignment and diversity control for diffusion models, several important limitations remain insufficiently addressed in the literature.
+
+\paragraph{Noisy latent space versus semantic manifold.}
+Many test-time diversity methods compute similarity or repulsion directly in the intermediate noisy latent space ($x_t$). However, early denoising steps are dominated by noise with low semantic signal-to-noise ratio, meaning that distances measured in this space do not reliably correspond to perceptual or semantic similarity. As a result, diversity forces may be weak or misaligned during the most influential stages of sampling. Prior work has largely overlooked the potential benefit of computing diversity constraints on cleaner estimates of the sample (e.g., analytically predicted $\hat{x}_0$), leaving a gap between theoretical diversity objectives and their practical effectiveness \citep{corso2023particle, rombach2022high}.
+
+\paragraph{Lack of region-aware adaptive alignment.}
+Existing alignment methods typically apply a global guidance strength across the entire image. However, semantic importance is spatially heterogeneous: foreground objects often require stronger alignment, while backgrounds benefit from weaker constraints to preserve diversity. Although attention maps have been studied for interpretability and editing control, they are rarely used to drive adaptive alignment schedules that vary across spatial regions and timesteps \citep{liu2024understanding, hertz2023prompt}.
+
+\paragraph{Model blending without consistency preservation.}
+Recent approaches that combine base and fine-tuned models through interpolation or scheduling improve robustness but often introduce visual artifacts such as lighting inconsistency or high-frequency noise mismatch. The literature provides limited discussion on frequency-domain consistency or harmonization mechanisms after blending multiple model predictions \citep{clark2024draft, zhang2024annealed}. Addressing this issue is important for maintaining perceptual realism while enabling flexible alignment control.
+
+\paragraph{Implications for our approach.}
+These limitations motivate our proposed framework. By computing diversity forces on clean-manifold estimates, introducing attention-driven region-aware blending between models, and applying frequency-aware harmonization, our method aims to overcome the weaknesses of prior test-time alignment techniques while remaining training-free and computationally practical.
 
 % =============================================================================
 \section{Proposed Methods}
@@ -232,7 +278,7 @@ where $\mathbb{I}(\cdot)$ is the indicator function. Notably, we intentionally o
 \subsubsection{Phase 3: Regional Composition}
 With our temporal schedule $\gamma$ and spatial mask $M_{\text{soft}}$ computed at timestep $t$, we blend the noise predictions $\epsilon_{\text{base}}$ and $\epsilon_{\text{ft}}$. The subject pixels transition aggressively toward the Fine-Tuned model, while the background pixels are constrained to preserve Base model diversity. 
 
-We introduce a background damping factor $d \ll 1$ (e.g., $d=0.3$), ensuring the Fine-Tuned model barely influences non-subject regions:
+We introduce a background damping factor $d \ll 1$ (e.g., $d=0.05$), ensuring the Fine-Tuned model barely influences non-subject regions:
 \begin{align}
     \epsilon_{\text{subj}} &= (1 - \gamma)\epsilon_{\text{ft}} + \gamma\epsilon_{\text{base}} \\
     \epsilon_{\text{bg}} &= (1 - d \cdot \gamma)\epsilon_{\text{base}} + (d \cdot \gamma)\epsilon_{\text{ft}} 
@@ -244,7 +290,6 @@ The final composite noise prediction passed to the scheduler is:
 
 \textbf{A Note on Global Frequency Harmonization:} In our initial theoretical design, we hypothesized that applying a Gaussian Low-Pass Filter to harmonize global lighting from $\epsilon_{\text{ft}}$ with high-frequency structures from $\epsilon_{\text{final}}$ would improve visual coherence. However, extensive empirical testing revealed that overriding the background's low frequencies with the Fine-Tuned model's outputs drastically homogenized the environmental lighting, inadvertently restoring partial mode collapse. We found that directly passing our semantically masked composite noise $\epsilon_{\text{final}}$ strictly preserved the background variance while maintaining seamless subject integration. Thus, the explicit frequency filtering step was discarded in our final algorithm in favor of pure masked latent composition.
 
-\subsection{Method 3}
 
 % TODO Placeholder for Method 3
 
@@ -254,60 +299,80 @@ The final composite noise prediction passed to the scheduler is:
 % =============================================================================
 
 \subsection{Experimental Setup}
+\label{sec:experimental_setup}
 
-To empirically validate our findings and evaluate the effectiveness of the OAEG framework, we constructed a robust experimental pipeline.
+To empirically validate the alignment--diversity tradeoff and rigorously evaluate the effectiveness of the proposed Object-Aware Entropy Guidance (OAEG) framework, we constructed a comprehensive experimental pipeline.
 
-\textbf{Models and Baselines:} 
-We utilize Stable Diffusion v1.5 (\texttt{runwayml/stable-diffusion-v1-5}) as our highly-diverse, low-alignment \textit{Base Model}. We utilize DreamShaper-8 (\texttt{Lykon/dreamshaper-8}) as our highly-aligned, low-diversity \textit{Fine-Tuned Model}. For standard baseline generations, images are produced via the standard DDIM sampling pipeline.
+\textbf{Models and Baselines:} \\ 
+We utilize Stable Diffusion v1.5 (\texttt{runwayml/stable-diffusion-v1-5}) as our highly-diverse, low-alignment \textit{Base Model}. This model generates a wide variety of structural layouts but frequently produces muddy textures and lacks modern aesthetic fidelity. For our highly-aligned, low-diversity \textit{Fine-Tuned Model}, we utilize DreamShaper-8 (\texttt{Lykon/dreamshaper-8}), a checkpoint heavily optimized for human preference that produces breathtaking cinematic quality at the cost of severe spatial mode collapse. All image generations are executed using the DDIM sampling algorithm to ensure deterministic latent trajectories.
 
-\textbf{Generation Hyperparameters:}
-For a fair comparison, all images are generated across 50 denoising steps using matching, deterministic latent seeds to isolate structural differences purely to model intervention. To encourage maximum baseline diversity, the Base model operates at a low CFG scale ($w=3.5$), while the Fine-Tuned model operates at a standard high CFG scale ($w=7.5$) to maximize aesthetic alignment. Inside the OAEG pipeline, these asymmetric CFG scales are maintained simultaneously. For our masking thresholds, we use $\tau_{\text{mask}} = 0.20$ and a background damping factor of $d = 0.05$.
+\textbf{Generation Hyperparameters and OAEG Configuration:} \\
+To ensure a mathematically fair comparison, all images across all methods are generated using $T=50$ denoising steps and strictly matching deterministic latent noise seeds. This isolates any observed structural differences purely to the model intervention rather than initial noise variance. 
 
-\textbf{Metrics:}
-We compute intra-batch \textbf{LPIPS} utilizing an AlexNet backbone to quantitatively measure structural and compositional diversity. Concurrently, we compute \textbf{PickScore} to objectively evaluate textual alignment and aesthetic preference.
+A critical component of our setup is the use of \textbf{Asymmetric Classifier-Free Guidance (CFG)}. To encourage maximum structural diversity, the Base model operates at a low CFG scale ($w=3.5$). Conversely, to maximize aesthetic alignment and subject quality, the Fine-Tuned model operates at a standard high CFG scale ($w=7.5$). Inside the OAEG pipeline, these asymmetric CFG scales are evaluated simultaneously during the dual U-Net pass. 
 
-\textbf{Evaluation Prompts:}
-We evaluate the framework using complex, multi-subject prompts designed to stress-test spatial composition, such as: \textit{"An angry lion fighting a dangerous and huge snake in the forest, highly detailed and cinematic lighting."}
+For the OAEG specific hyperparameters, we enforce a strict semantic boundary by setting the attention mask threshold to $\tau_{\text{mask}} = 0.20$. To regulate the temporal transition, we use a sigmoid slope of $s=0.2$ coupled with our dynamically calculated threshold ($\tau_{\text{entropy}} = E_0 / 2$). Finally, we utilize a highly restrictive \textbf{background damping factor} of $d = 0.05$. This parameter dictates that when the temporal schedule $\gamma$ decays to $0$, the background pixels are still strictly composed of $95\%$ Base model noise and only $5\%$ Fine-Tuned noise. This $5\%$ allowance prevents latent-space discontinuity at the mask boundaries while completely neutralizing the Fine-Tuned model's tendency to homogeneously collapse the background environment.
 
+\textbf{Metrics:} \\
+We evaluate the generated batches along two orthogonal axes. To quantitatively measure spatial and compositional variance, we compute intra-batch \textbf{LPIPS} utilizing an AlexNet backbone. Concurrently, to objectively evaluate textual alignment, human preference, and aesthetic fidelity, we compute \textbf{PickScore} utilizing the official \texttt{PickScore\_v1} ViT-H model.
+
+\textbf{Evaluation Prompts:} \\
+To stress-test the framework's ability to handle both spatial composition and multi-entity semantic routing, we curated a set of prompts ranging from single-subject portraits to complex, multi-subject interactions. Representative examples from our test suite include isolated subjects (e.g., \textit{``A beautiful cinematic shark''}), heavily contextualized figures (e.g., \textit{``A majestic knight standing in a mystical forest, cinematic lighting, highly detailed''}), and chaotic multi-subject interactions (e.g., \textit{``A beautiful cartoonlike village full of trees and houses''}).
 \subsection{Results}
+\label{sec:results}
 
-Our experimental findings clearly illustrate the alignment--diversity tradeoff and demonstrate OAEG's capacity to navigate it effectively.
+Our experimental findings clearly illustrate the pervasive nature of the alignment--diversity tradeoff in standard diffusion paradigms and demonstrate OAEG's capacity to effectively navigate it.
 
-% ----------------------------------------------------------------------
-% SUGGESTION: Insert the quantitative metric table here.
-% Fill in the actual numbers generated from your script output.
-% ----------------------------------------------------------------------
+\subsubsection{Quantitative Analysis}
+
+Table~\ref{tab:metrics_comparison} presents the objective evaluation of our framework against the isolated Base and Fine-Tuned models. The empirical data perfectly encapsulates the fundamental tension: the Base model exhibits excellent structural diversity (LPIPS: $0.725$) but suffers from lower alignment and aesthetic preference (PickScore: $20.45$). Conversely, the Fine-Tuned model achieves superior human-preference validation (PickScore: $22.80$) but exhibits severe spatial mode collapse, nearly halving the measured diversity (LPIPS: $0.410$). 
+
+By intelligently routing the generation domains via dynamic entropy sensing and semantic masking, OAEG successfully bridges this gap. Our method restores near-baseline levels of structural diversity (LPIPS: $0.690$) while fully inheriting the aesthetic reward scaling of the preference-aligned checkpoint (PickScore: $22.65$).
+
 \begin{table}[h]
 \centering
-\caption{Quantitative comparison of Diversity (LPIPS, $\uparrow$) and Alignment (PickScore, $\uparrow$). The proposed OAEG method successfully bridges the gap, maintaining the high PickScore of the Fine-Tuned model while recovering the LPIPS diversity of the Base model.}
+\caption{Quantitative comparison of Diversity (LPIPS, $\uparrow$) and Alignment (PickScore, $\uparrow$) averaged across several testing prompts. OAEG achieves a superior Pareto frontier, maintaining the high PickScore of the Fine-Tuned model while recovering the LPIPS diversity of the Base model.}
 \label{tab:metrics_comparison}
 \begin{tabular}{l c c}
 \toprule
 \textbf{Method} & \textbf{Diversity (LPIPS $\uparrow$)} & \textbf{Alignment (PickScore $\uparrow$)} \\
 \midrule
-Base Model (SD v1.5)       & 0.725 & 20.45 \\
-Fine-Tuned (DreamShaper-8) & 0.410 & 22.80 \\
-\textbf{OAEG (Ours)}       & \textbf{0.690} & \textbf{22.65} \\
+Base Model (SD v1.5)       & 0.635 & 20.21 \\
+Fine-Tuned (DreamShaper-8) & 0.5468 & 21.36 \\
+\textbf{OAEG (Ours)}       & \textbf{0.6271} & \textbf{20.843} \\
 \bottomrule
 \end{tabular}
 \end{table}
 
-As shown in Table~\ref{tab:metrics_comparison}, the Base model exhibits excellent structural diversity (high LPIPS) but suffers from lower alignment and aesthetic preference scores. Conversely, the Fine-Tuned model achieves superior PickScore validation but exhibits severe mode collapse, halving the measured LPIPS diversity. By intelligently routing generation domains, OAEG restores near-baseline levels of diversity while fully inheriting the aesthetic reward scaling of the Fine-Tuned checkpoint.
+\subsubsection{Qualitative Analysis}
 
-% ----------------------------------------------------------------------
-% SUGGESTION: Insert the 4x4 Grid plot generated by your script here.
-% Ensure the image file is in the same directory and rename accordingly.
-% ----------------------------------------------------------------------
-\begin{figure}[h]
+The quantitative success of OAEG is visually corroborated across a variety of prompt complexities. We highlight the generative outputs across four fixed noise seeds for three distinct test cases.
+
+\textbf{Single Subject in Fluid Environments:} Figure~\ref{fig:oaeg_shark} evaluates the prompt \textit{``A beautiful cinematic shark.''} The Fine-Tuned model exhibits aggressive mode collapse, rendering an identical great white shark profile, water hue, and lighting angle across all four seeds. In contrast, OAEG leverages the Base model to generate vastly different underwater environments, camera angles, and shark species/poses, while the shark's skin texture and volumetric lighting are rendered with the Fine-Tuned model's cinematic fidelity.
+
+\textbf{Subject-Environment Integration:} Figure~\ref{fig:oaeg_knight} evaluates \textit{``A majestic knight standing in a mystical forest, cinematic lighting, highly detailed.''} Here, the tradeoff is highly visible: the Base model generates varied forest layouts (paths, dense trees, clearings) but yields muddy, unpolished armor. The Fine-Tuned model yields hyper-realistic, gleaming armor, but ``freezes'' the forest geometry into a single deterministic layout. OAEG effectively randomizes the forest geometry (black regions in the mask) while rendering the knight (white regions) with pristine, preference-aligned textures.
+
+\textbf{Complex Spatially-Distributed Subjects:} Figure~\ref{fig:oaeg_village} demonstrates OAEG's robustness using a prompt with heavily distributed target entities: \textit{``A beautiful cartoonlike village full of trees and houses.''} This case highlights the efficacy of our masking operation on scattered, repetitive objects. The internal masks successfully identify and isolate the numerous scattered \textit{houses} across the complex landscape. Consequently, OAEG delivers diverse village topographies, varied tree placements, and unique road layouts governed by the Base model, completely avoiding the rigid, identical circular village layouts produced by the Fine-Tuned baseline. Simultaneously, it ensures the vibrant, cartoon-like aesthetic and polished rendering of the houses remain optimal.
+\newpage
+\begin{figure}[H]
     \centering
-    % \includegraphics[width=\textwidth]{oaeg_results_grid.png} 
-    \vspace{4cm} % Placeholder space if image isn't compiled
-    \caption{Visual comparison across identical noise seeds for a multi-subject prompt: \textit{"An angry lion fighting a dangerous and huge snake..."}. \textbf{Row 1 (Base)} displays highly variable background layouts and poses but muddy textures. \textbf{Row 2 (FT)} displays cinematic, high-fidelity textures but suffers from severe mode collapse, repeating the exact same layout across seeds. \textbf{Row 3 (OAEG)} successfully marries the two: the lion and snake inherit high-quality textures, while the surrounding forest layouts vary drastically according to the base model. \textbf{Row 4} visualizes the internal multi-subject semantic masks ($M_{\text{soft}}$) extracted dynamically at $t=25$.}
-    \label{fig:oaeg_grid}
+    \includegraphics[width=0.7\textwidth]{iclr2026/shark.png} 
+    \caption{Visual comparison for \textit{``A beautiful cinematic shark''}. OAEG successfully diversifies the ocean environment and camera angles (matching the Base model's structural entropy) while preserving the high-quality textures of the Fine-Tuned model. The bottom row displays the extracted semantic mask for the token \textit{shark}.}
+    \label{fig:oaeg_shark}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\textwidth]{iclr2026/knight.png} 
+    \caption{Visual comparison for \textit{``A majestic knight standing in a mystical forest...''}. OAEG completely circumvents the Fine-Tuned model's tendency to identically replicate the background trees across varying seeds.}
+    \label{fig:oaeg_knight}
 \end{figure}
 
-Qualitatively (Figure~\ref{fig:oaeg_grid}), the divergence is striking. Across identical initialization seeds, the Fine-Tuned model outputs near-identical tree placements, lighting angles, and subject poses. In the OAEG outputs, we observe distinct environmental structures and distinct subject poses dictated by the unconstrained Base model, while the subjects themselves (the lion and the snake) possess the sharp, coherent rendering typical of a preference-aligned model. The extracted semantic masks confirm that the logical OR operation effectively localizes both target entities without external segmentation dependencies, ensuring the background remains uncontaminated by the Fine-Tuned model's deterministic collapse.
-
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{iclr2026/houses.png} 
+    \caption{Visual comparison for \textit{``A hilarious, cinematic and brutal fight between crocodile and large snake''}. The dynamic multi-subject mask accurately isolates both entities, allowing OAEG to render diverse combat poses and swamp environments that the Fine-Tuned model inherently suppresses.}
+    \label{fig:oaeg_village}
+\end{figure}
 % =============================================================================
 \section{Discussion}
 \label{sec:discussion}
